# octant

./: .editorconfig  .env.template  .eslintignore  .eslintrc.js  .gitignore  .gitlab-ci.yml  .gitmodules  .prettierrc.yml  .solhint.json  ARCHITECTURE.md  CODEOWNERS  F_EbNyyUMbZuapabdzDrxLEl0h  README.md  TESTING.md  env.ts  flake.nix  hardhat.config.ts  mutex_queue  package.json  shell.nix  temporary-ingress.yaml  tsconfig.json  type-extensions.ts  types.ts
backend/: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  benchmark.py  docker-compose.yaml  docs.md  entrypoint.sh  gc_score.py  gunicorn_config.py  log_config.conf  pyproject.toml  socket_client.py  startup.py  ws_allocation_tester.py  ws_metrics.py  ws_req_metrics.py
backend/app/: __init__.py  constants.py  context.py  database.py  exceptions.py  extensions.py  graphql.py  logging.py  pydantic.py  settings.py  websockets.py
backend/app/context/: context.py  epoch_details.py  epoch_state.py  helpers.py  manager.py  projects.py  snapshots_state.py
backend/app/contracts/: __init__.py  abi.py  deposits.py  epochs.py  erc20.py  gnosis_safe.py  proposals.py  vault.py
backend/app/controllers/: allocations.py  deposits.py  docs.py  epochs.py  glm_claim.py  history.py  info.py  rewards.py  snapshots.py  user.py  validators.py  withdrawals.py
backend/app/core/: allocations.py  claims.py  common.py  deposits.py  epochs.py  glm.py  history.py  merkle_tree.py  pagination.py  proposals.py  rewards.py  staking.py  user.py  vault.py
backend/app/crypto/: account.py  eip1271.py  eip712.py  terms_and_conditions_consent.py
backend/app/database/: __init__.py  allocations.py  budgets.py  claims.py  deposits.py  epoch_snapshot.py  epochs.py  finalized_epoch_snapshot.py  models.py  patrons.py  patrons_events.py  pending_epoch_snapshot.py  rewards.py  user.py  user_consents.py
backend/app/engine/: epochs_settings.py
backend/app/history/: routes.py  service.py
backend/app/infrastructure/: __init__.py  apscheduler.py  events.py  exception_handler.py  graphql_client.py  routes.py
backend/app/modules/: dto.py  registry.py
backend/app/shared/: blockchain_types.py
backend/app/utils/: subgraph_events.py  time.py  timestamp.py
backend/data/: cancelled_streams.csv
backend/docs/: websockets-api.yaml
backend/migrations/: README  alembic.ini  env.py
backend/migrations/ipfs_integration/: cids.md  config.py  core.py  logic.py  migration_helpers.py
backend/migrations/versions/: 003a0cad5494_add_cached_status_for_holonym_sbt.py  00568e31f463_.py  0dbe7ab3ce9d_add_user_ip_in_multisig_signatures_table.py  0e5f1447625e_.py  0eaa0e5e2dae_add_delegation_table.py  1361f75e59a7_remove_addresses_from_timeout_list.py  16ed3f1d5233_.py  19d9995b2ced_add_project_details_model.py  19f6b4f5ce2e_update_leftover_for_epoch_3.py  1d3a470b8cf8_.py  1d3a470b8cf8_update_allocations_amount.py  1d7b215a9201_insert_budgets_for_epoch_2.py  1f5a0f69733a_unify_proposals_to_projects.py  1f89a0fae4ae_drop_allocation_nonce_column.py  2060b4c232c6_add_projects_details_from_ipfs_for_.py  20b1dba0cdc3_.py  216381a661df_add_project_details_from_ipfs_for_epoch_.py  234c46eecc33_.py  2a116ab607a5_add_projectsdetails_model.py  2a2ced0a6aa7_e7_remove_stuck_multisig_allocation_.py  306a56af8932_.py  (+67 more)
backend/scripts/: calculate_e11_staking_matched.py
backend/templates/: websockets-api-docs.html
backend/test_html/: glm-claim.html  websocket.html
backend/tests/: conftest.py  test_allocations.py  test_api_snapshot.py  test_claims_db.py  test_context.py  test_deposits.py  test_eip712.py  test_epoch_settings.py  test_epochs.py  test_epochs_registry.py  test_finalized_epoch_snapshot.py  test_glm.py  test_glm_claim.py  test_history.py  test_patron_mode.py  test_patrons_events_db.py  test_pending_epoch_snapshot.py  test_proposals.py  test_rewards.py  test_staking.py  test_user.py  test_user_consents.py  test_withdrawals.py
backend/v2/: main.py
backend/websocket_test/: index.html
localenv/multideployer/: Dockerfile  entrypoint.sh  pyproject.toml  server.py  wait_for_graph_rpc.sh  wait_for_subgraph.sh
unlocks-tracker/: .gitignore  README.md  pyproject.toml
unlocks-tracker/unlocks_tracker/: .env.sample  config.py  constants.py  files.py  helpers.py  run.py  schemas.py
(+3603 files in other folders)
