[tool.poetry]
name = "octant-backend"
version = "0.1.0"
description = ""
authors = ["Golem Foundation Contributors <contact@golem.foundation>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
flask = "^2.2.3"
flask-cors = "^4.0.0"
flask-migrate = "^4.0.4"
flask-socketio = "^5.3.3"
flask-restx = "^1.1.0"
jsonschema = "4.17.3" # quick fix until https://github.com/python-restx/flask-restx/issues/553 is resolved
flask-apscheduler = "^1.12.4"
gql = { extras = ["aiohttp"], version = "^3.4.0" }
requests = "^2.28.2"
web3 = "^6.5.0"
multiproof = { git = "https://github.com/stakewise/multiproof.git", rev = "v0.1.2" }
dataclass-wizard = "^0.22.2"
flask-caching = "^2.0.2"
eventlet = "^0.33.3"
requests-toolbelt = "^1.0.0"
pydantic = "^2.6.0"
pandas = "^2.2.0"
gmpy2 = "^2.1.5"
sentry-sdk = {extras = ["flask"], version = "^2.5.1"}
redis = "^5.0.7"
fastapi = "^0.112.0"
mypy = "^1.11.2"
isort = "^5.13.2"
pydantic-settings = "^2.4.0"
uvicorn = "^0.30.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
black = "^23.3.0"
pytest-cov = "^4.0.0"
freezegun = "^1.2.2"
flake8 = "^6.0.0"
flake8-bugbear = "^23.7.10"
flake8-pyproject = "^1.2.3"
pyright = "^1.1.366"
pylookup = "^0.2.2"
importmagic = "^0.1.7"
epc = "^0.0.5"
isort = "^5.13.2"
mypy = "^1.11.2"
ruff = "^0.6.2"
aiosqlite = "^0.20.0"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
psycopg2-binary = "^2.9.6"

[tool.black]
line-length = 88
exclude = '''
/(
  \.venv
)/
'''

[tool.flake8]
max-line-length = 88
select = ["C", "E", "F", "W", "B"]
extend-ignore = ["E203", "E501", "W503"]
exclude = ["./migrations", "./.venv"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
