[tool.poetry]
name = "unlocks-tracker"
version = "1.0.0"
description = ""
authors = ["Golem Foundation Contributors <contact@golem.foundation>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gql = { extras = ["aiohttp"], version = "^3.4.0" }
requests = "^2.28.2"
python-dotenv = "^1.0.0"
requests-toolbelt = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
