[tool.poetry]
name = "multideployer"
version = "0.1.0"
description = ""
authors = ["Pawel Peregud <paulperegud@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
